added mixins, start of home layout

--- a/index.html
+++ b/index.html
@@ -3,3 +3,11 @@ layout: home
 titleAfter: A true catalyst for change
 meta:
 ---
+
+  {% include bg-video.html %}
+
+  {% include home-about.html %}
+
+  {% include home-connect.html %}
+
+  {% include home-team.html %}
