about page created, hero and some text added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
-layout: home
+layout: default
 titleAfter: A true catalyst for change
 meta:
 ---
 
-  {% include bg-video.html %}
+{% include bg-video.html %}
 
-  {% include home-about.html %}
+{% include home-about.html %}
 
-  {% include home-connect.html %}
+{% include home-connect.html %}
 
-  {% include home-team.html %}
+{% include home-team.html %}
