team members added, waypoint function for nav, some responsiveness to pages

--- a/about.html
+++ b/about.html
@@ -3,15 +3,20 @@ layout: default
 title: About Us
 meta:
 ---
-
-<section class="about-hero hero">
-  <div class="hero-text text-center">
-    <h1 class="hero-header">WE ARE THE WORLDS FIRST CANNABIS STREAMING COMPANY</h1>
+<section class="bg-video clearfix">
+  <div class="video-text-overlay text-center">
+    <h1 class="hero-header way">WE ARE THE WORLDS FIRST CANNABIS STREAMING COMPANY</h1>
     <h2 class="hero-sub">The model is simple. We fund facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production.
     </h2>
   </div>
-  <div class="hero-img">
-    <img class="img-banner" src="http://res.cloudinary.com/dtbrkt2ur/image/upload/v1491316366/kscope-b-home_d2pjtb.jpg" alt="">
+
+  <div class="video-dots">
+  </div>
+
+  <div class="fullscreen-bg">
+    <video muted autoplay poster="" class="fullscreen-bg__video">
+        <source src="http://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
+    </video>
   </div>
 </section>
 
