--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@ meta:
 {% include home-connect.html %}
 
 {% include home-team.html %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
