--- a/team.html
+++ b/team.html
@@ -3,22 +3,29 @@ layout: default
 title: team
 meta:
 ---
-<section class="team-hero hero">
-  <div class="hero-text text-center">
-    <h1 class="hero-header">A dedicated team for growth</h1>
+<section class="bg-video clearfix">
+  <div class="video-text-overlay text-center">
+    <h1 class="hero-header way">A dedicated team for growth</h1>
     <h2 class="hero-sub">Our management team is comprised of industry first-movers, visionaries and Experts, dedicated to creating value for our partners and the cannabis industry.
+    </h2>
   </div>
-  <div class="hero-img">
-    <img class="img-banner" src="http://res.cloudinary.com/dtbrkt2ur/image/upload/v1491316366/kscope-b-home_d2pjtb.jpg" alt="">
+
+  <div class="video-dots">
+  </div>
+
+  <div class="fullscreen-bg">
+    <video muted autoplay poster="" class="fullscreen-bg__video">
+        <source src="http://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
+    </video>
   </div>
 </section>
-<p>{{team.name}}</p>
 
 <section class="team-profiles">
-  {% for team in site.data.staff %}
+  {% for data in site.data.staff %}
+    {% assign team = data[1] %}
     <div class="team-member">
       <div class="team-photo">
-        <img src="{{team.img}}" alt="">
+        <img class="img-flex" src="{{team.img}}" alt="">
       </div>
       <h3 class="team-name">{{team.name}}</h3>
       <p class="team-title">{{team.title}}</p>
