--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ meta:
 
   <div class="fullscreen-bg">
     <video muted autoplay poster="" class="fullscreen-bg__video">
-        <source src="http://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
+        <source src="https://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
     </video>
   </div>
 </section>
@@ -65,6 +65,6 @@ meta:
     </h2>
   </div>
   <div class="hero-img">
-    <img class="img-banner" src="http://res.cloudinary.com/dtbrkt2ur/image/upload/v1491316366/kscope-b-home_d2pjtb.jpg" alt="">
+    <img class="img-banner" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491316366/kscope-b-home_d2pjtb.jpg" alt="">
   </div>
 </section>
