font weight change

--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@ meta:
 
   <div class="fullscreen-bg">
     <video muted autoplay poster="" class="fullscreen-bg__video">
-        <source src="http://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
+        <source src="https://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
     </video>
   </div>
 </section>
