--- a/about.html
+++ b/about.html
@@ -69,7 +69,11 @@ meta:
     <h2 class="hero-sub">We enable our partners to capitalize on the growth of the medical cannabis market and the introduction of the recreational cannabis market by leveraging our brands building expertise to create brands and products that resonate with the consumer.
     </h2>
   </div>
+
+  <div class="video-dots">
+  </div>
+
   <div class="hero-img">
-    <img class="img-banner" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491316366/kscope-b-home_d2pjtb.jpg" alt="">
+    <img class="img-banner" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491596967/future-positioning_xwl6v5.jpg" alt="">
   </div>
 </section>
