image pathway fix

--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@ meta:
     {% assign team = data[1] %}
     <div class="team-member">
       <div class="team-photo">
-        <img class="img-flex" src="{{team.img}}" alt="">
+        <img class="img-flex" src="{{site.baseurl}}/{{team.img}}" alt="">
       </div>
       <h3 class="team-name">{{team.name}}</h3>
       <p class="team-title">{{team.title}}</p>
