--- a/about.html
+++ b/about.html
@@ -55,10 +55,14 @@ meta:
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo conse-quat.
     </p>
     <div class="text-huge-green">
-      <h2 class="header-huge">20+</h2>
-      <h3 class="content-huge">Clinic relationships and growing</h3>
-      <h2 class="header-huge">25K+</h2>
-      <h3 class="content-huge">Access to ACMPR registered patients</h3>
+      <div class="huge-text-box">
+        <h2 class="header-huge">20+</h2>
+        <h3 class="content-huge">Clinic relationships and growing</h3>
+      </div>
+      <div class="huge-text-box">
+        <h2 class="header-huge">25K+</h2>
+        <h3 class="content-huge">Access to ACMPR registered patients</h3>
+      </div>
     </div>
   </div>
 </section>
