input graphics for about page

--- a/about.html
+++ b/about.html
@@ -67,10 +67,13 @@ meta:
   </div>
 </section>
 
-<section class="about-grid">
-  <div class="banner banner-one">
-    <div class="banner-img-left">
-      <img class="img-oversize" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" alt="">
+<section class="about-grid wrapper">
+  <div class="banner banner-one graphic">
+    <div class="banner-img-left small-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-1-s.svg" alt="">
+    </div>
+    <div class="banner-img-left large-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-1-l.svg" alt="">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">FUTURE PRODUCT POSITIONING</h1>
@@ -79,20 +82,26 @@ meta:
     </div>
   </div>
 
-  <div class="banner banner-two">
+  <div class="banner banner-two graphic">
     <div class="banner-text-left">
       <h1 class="banner-header">DIVERSIFICATION</h1>
       <h2 class="banner-sub">Production is diversified across many streaming partners, reducing the risk associated with build-out delays, licensing delays, poor harvests, etc.<br><br>Given the reduced production risk, Cannabis Wheaton represents the ideal partner for medical clinics and any other distribution channel.
       </h2>
     </div>
-    <div class="banner-img-right">
-      <img class="img-oversize" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" alt="">
+    <div class="banner-img-right small-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-2-s.svg" alt="">
+    </div>
+    <div class="banner-img-right large-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-2-l.svg" alt="">
     </div>
   </div>
 
-  <div class="banner banner-one">
-    <div class="banner-img-left">
-      <img class="img-oversize" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" alt="">
+  <div class="banner banner-one graphic">
+    <div class="banner-img-left small-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-3-s.svg" alt="">
+    </div>
+    <div class="banner-img-left large-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-3-l.svg" alt="">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">UPSIDE</h1>
@@ -101,14 +110,17 @@ meta:
     </div>
   </div>
 
-  <div class="banner banner-two">
+  <div class="banner banner-two graphic">
     <div class="banner-text-left">
       <h1 class="banner-header">BEST BRANDS</h1>
       <h2 class="banner-sub">Cannabis Wheaton, through it’s partnerships, can provide an LP agnostic solution for leading global cannabis brands that want to enter into the Canadian market.
       </h2>
     </div>
-    <div class="banner-img-right">
-      <img class="img-oversize" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" alt="">
+    <div class="banner-img-right small-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-4-s.svg" alt="">
+    </div>
+    <div class="banner-img-right large-graphic">
+      <img class="img-flex" src="{{site.baseurl}}/svgs/about-us-graphic-4-l.svg" alt="">
     </div>
   </div>
 </section>
