input new content

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ meta:
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
     <h1 class="hero-header way">WE ARE THE WORLDS FIRST CANNABIS STREAMING COMPANY</h1>
-    <h2 class="hero-sub">The model is simple. We fund facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production.
+    <h2 class="hero-sub">The model is simple: We fund facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production.
     </h2>
   </div>
 
@@ -28,11 +28,10 @@ meta:
 <section class="text-section">
   <div class="para-box">
     <h2 class="para-header">
-      Our model allows our partners to exceed their growth potential and achieve success.
+      Our model allows our streaming partners to exceed their growth potential and to achieve success.
     </h2>
     <p class="para-body">
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo conse-quat.
-      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+      We are not interested in creating a monopoly. We are interested in creating value for companies and allowing them to exceed their growth potential and to achieve success.
     </p>
   </div>
 </section>
@@ -49,10 +48,10 @@ meta:
 <section class="text-section">
   <div class="para-box">
     <h2 class="para-header">
-      Our partners have access to our strategic relationships in the industry to help build their customer base.
+      Legal &<br>Financial<br>Expertise
     </h2>
     <p class="para-body">
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo conse-quat.
+      Our streaming partners have access to our strategic relationships in the industry to help build their customer base.
     </p>
     <div class="text-huge-green">
       <div class="huge-text-box">
@@ -77,7 +76,7 @@ meta:
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">FUTURE PRODUCT POSITIONING</h1>
-      <h2 class="banner-sub">We enable our partners to capitalize on the growth of the medical cannabis market and the introduction of the recreational cannabis market by leveraging our brands building expertise to create brands and products that resonate with the consumer.
+      <h2 class="banner-sub">We enable our streaming partners to understand and reach the growing medical cannabis market by leveraging our brand building expertise to create brands and products that resonate with patients.<br><br>As Canada moves towards an adult recreational market, which will have strict marketing, advertising and labelling regulations, we can help our streaming partners prepare for and build their brands in order to grow customer loyalty.
       </h2>
     </div>
   </div>
@@ -85,7 +84,7 @@ meta:
   <div class="banner banner-two graphic">
     <div class="banner-text-left">
       <h1 class="banner-header">DIVERSIFICATION</h1>
-      <h2 class="banner-sub">Production is diversified across many streaming partners, reducing the risk associated with build-out delays, licensing delays, poor harvests, etc.<br><br>Given the reduced production risk, Cannabis Wheaton represents the ideal partner for medical clinics and any other distribution channel.
+      <h2 class="banner-sub">At Cannabis Wheaton we believe there is strength in numbers.  We invest and support a wide range of cannabis cultivation companies that make up our roster of streaming partners each with a unique offering, based on their individual leadership teams and expertise, and specialized growing techniques and innovations.<br><br>Production is diversified across many streaming partners, reducing the risk associated with build-out delays, licensing delays, poor harvests, etc.  <br><br>Given the reduced production risk, Cannabis Wheaton represents the ideal partner for medical clinics and any other distribution channel.
       </h2>
     </div>
     <div class="banner-img-right small-graphic">
@@ -105,7 +104,7 @@ meta:
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">UPSIDE</h1>
-      <h2 class="banner-sub">Currently, significant shareholder value is created as licensed producers advance through the Health Canada licensing process; however, there is limited access and significant risk in investing in these licensed producers still in the application stage of licensing.<br><br>Cannabis Wheaton creates an opportunity for investors to access these licensed producers with significant upside potential, while mitigating risk through diversification, value and the expertise of our management team.
+      <h2 class="banner-sub">Currently, significant shareholder value is created as applicant licensed producers advance through the Health Canada licensing process; however, there is limited access and significant risk in investing in those still in the application stage of licensing.  <br><br>Cannabis Wheaton creates an opportunity for investors to access these licensed producers with significant upside potential, while mitigating risk through diversification, value and the expertise of our management team.
       </h2>
     </div>
   </div>
@@ -113,7 +112,7 @@ meta:
   <div class="banner banner-two graphic">
     <div class="banner-text-left">
       <h1 class="banner-header">BEST BRANDS</h1>
-      <h2 class="banner-sub">Cannabis Wheaton, through it’s partnerships, can provide an LP agnostic solution for leading global cannabis brands that want to enter into the Canadian market.
+      <h2 class="banner-sub">Cannabis Wheaton provides our streaming partners with customized branding solutions that not only comply with the Canadian regulations, but that also speak to and resonate with the Canadian market. We also work with leading global cannabis brands that want to enter into the Canadian market.
       </h2>
     </div>
     <div class="banner-img-right small-graphic">
