--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@ meta:
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
     <h1 class="hero-header way">A dedicated team for growth</h1>
-    <h2 class="hero-sub">Our management team is comprised of industry first-movers, visionaries and Experts, dedicated to creating value for our partners and the cannabis industry.
+    <h2 class="hero-sub">Our management team is comprised of industry first-movers, visionaries and experts, dedicated to creating value for our partners and the cannabis industry.
     </h2>
   </div>
 
