--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ meta:
 <section class="text-section">
   <div class="para-box">
     <h2 class="para-header">
-      Legal &<br>Financial<br>Expertise
+      Legal & Financial Expertise
     </h2>
     <p class="para-body">
       Our streaming partners have access to our strategic relationships in the industry to help build their customer base.
