changing up some stuff on the about page wadup

--- a/about.html
+++ b/about.html
@@ -50,7 +50,11 @@ meta:
     <h2 class="para-header-alt">
       Our streaming partners have access to our strategic relationships in the industry to help build their customer base.
     </h2>
-
+    <div class="para-body-alt">
+      <p>
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+      </p>
+    </div>
   </div>
   <div class="text-huge-green">
     <div class="huge-text-box">
@@ -60,6 +64,19 @@ meta:
     <div class="huge-text-box">
       <h2 class="header-huge">25K+</h2>
       <h3 class="content-huge">Access to ACMPR registered patients</h3>
+    </div>
+  </div>
+</section>
+
+<section class="wheaton-benefit">
+  <div class="hero">
+    <div class="hero-text text-center">
+      <h1 class="hero-header">Why Cannabis wheaton is better</h1>
+    </div>
+    <div class="video-dots">
+    </div>
+    <div class="hero-img">
+      <img src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492531279/diverse_mtk4a1.jpg" alt="">
     </div>
   </div>
 </section>
