contact form linked to thank you page

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@ meta:
     <h1 class="hero-header">Contact Us</h1>
     <form class="clearfix" method="POST" action="http://formspree.io/info@cannabiswheaton.com">
       <input type="text" name="fullname" placeholder="Your full name">
-      <input type="email" name="_replyto" placeholder="Your email address">
+      <input type="email" name="email" placeholder="Your email address">
       <textarea name="message" placeholder="Your message"></textarea>
       <button type="submit">Send</button>
-      <input type="hidden" name="_next" value="{{site.baseurl}}/thanks.html" />
+      <input type="hidden" name="_next" value="{{site.baseurl}}/thanks" />
     </form>
   </div>
 
