--- a/thanks.html
+++ b/thanks.html
@@ -3,3 +3,18 @@ layout: default
 title: Thank you
 meta:
 ---
+<section class="text-section thanks-page">
+  <div class="para-box">
+    <h2 class="para-header">
+      Thank you for contacting Cannabis Wheaton.
+    </h2>
+    <div class="para-body">
+      <p class="pad-b">
+        A member of our dedicated team will be in touch with you as soon as possible.
+      </p>
+      <div class="text-center">
+        <a class="button-dark text-center" href="{{site.baseurl}}/">Return to Home</a>
+      </div>
+    </div>
+  </div>
+</section>
