--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ meta:
 <section class="about-grid">
   <div class="banner banner-one">
     <div class="banner-img-left">
-      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492531279/future_bvq3vq.jpg" alt="">
+      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492718034/leaf_juc8zd.gif" alt="">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">FUTURE PRODUCT POSITIONING</h1>
@@ -100,13 +100,13 @@ meta:
       </h2>
     </div>
     <div class="banner-img-right">
-      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492531279/diverse_mtk4a1.jpg" alt="">
+      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492718034/leaf_juc8zd.gif" alt="">
     </div>
   </div>
 
   <div class="banner banner-one">
     <div class="banner-img-left">
-      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492531279/upside_eceqan.jpg" alt="">
+      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492718034/leaf_juc8zd.gif" alt="">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">UPSIDE</h1>
@@ -122,7 +122,7 @@ meta:
       </h2>
     </div>
     <div class="banner-img-right">
-      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492531279/bestbrands_fcie8i.jpg" alt="">
+      <img class="" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492718034/leaf_juc8zd.gif" alt="">
     </div>
   </div>
 </section>
