--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ meta:
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">FUTURE PRODUCT POSITIONING</h1>
-      <h2 class="banner-sub">We enable our streaming partners to understand and reach the growing medical cannabis market by leveraging our brand building expertise to create brands and products that resonate with patients.<br><br>As Canada moves towards an adult recreational market, which will have strict marketing, advertising and labelling regulations, we can help our streaming partners prepare for and build their brands in order to grow customer loyalty.
+      <h2 class="banner-sub">We enable our streaming partners to understand and reach the growing medical cannabis market by leveraging our brand building expertise to create brands and products that resonate with patients. As Canada moves towards an adult recreational market, which will have strict marketing, advertising and labelling regulations, we can help our streaming partners prepare for and build their brands in order to grow customer loyalty.
       </h2>
     </div>
   </div>
@@ -110,7 +110,7 @@ meta:
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">UPSIDE</h1>
-      <h2 class="banner-sub">Currently, significant shareholder value is created as applicant licensed producers advance through the Health Canada licensing process; however, there is limited access and significant risk in investing in those still in the application stage of licensing.  <br><br>Cannabis Wheaton creates an opportunity for investors to access these licensed producers with significant upside potential, while mitigating risk through diversification, value and the expertise of our management team.
+      <h2 class="banner-sub">Currently, significant shareholder value is created as applicant licensed producers advance through the Health Canada licensing process; however, there is limited access and significant risk in investing in those still in the application stage of licensing.   Cannabis Wheaton creates an opportunity for investors to access these licensed producers with significant upside potential, while mitigating risk through diversification, value and the expertise of our management team.
       </h2>
     </div>
   </div>
