center text, footer logo resize, remove team images

--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@ meta:
   {% for member in site.data.members %}
     <div class="team-member">
       <div class="team-photo">
-        <img class="img-flex" src="{{site.baseurl}}/{{member.img}}" alt="">
+      <!--  <img class="img-flex" src="" alt="">-->
       </div>
       <h3 class="team-name">{{member.name}}</h3>
       <p class="team-title">{{member.title}}</p>
