--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ meta:
 
 <section class="text-section">
   <div class="para-box">
-    <h2 class="para-header">
+    <h2 class="para-header-alt">
       Our model allows our streaming partners to exceed their growth potential and to achieve success.
     </h2>
     <p class="para-body">
