--- a/about.html
+++ b/about.html
@@ -40,6 +40,9 @@ meta:
   <div class="small-graphic">
     <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-mobile.svg" alt="">
   </div>
+  <div class="med-graphic">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-tablet.svg" alt="">
+  </div>
   <div class="large-graphic">
     <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-desktop.svg" alt="">
   </div>
