New content input

--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@ meta:
 ---
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
-    <h1 class="hero-header way">WE ARE THE WORLDS FIRST CANNABIS STREAMING COMPANY</h1>
-    <h2 class="hero-sub">The model is simple: We fund facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production.
+    <h1 class="hero-header way">WE ARE THE FIRST CANNABIS STREAMING COMPANY</h1>
+    <h2 class="hero-sub">The model is simple: We provide funding for facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production.<br><br>We provide the platform for growth so our partners can focus on innovation.
     </h2>
   </div>
 
@@ -51,11 +51,11 @@ meta:
 <section class="text-section about-financial">
   <div class="para-box">
     <h2 class="para-header-alt">
-      Our streaming partners have access to our strategic relationships in the industry to help build their customer base.
+      Our streaming partners have access to our deep strategic and industry relationships to help create value, drive brand awareness and build their customer base.
     </h2>
     <div class="para-body-alt">
       <p>
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+        Our collective insights and experiences allow Cannabis Wheaton to provide our streaming partners real-world guidance for every stage this ever-evolving landscape.
       </p>
     </div>
   </div>
@@ -91,7 +91,7 @@ meta:
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">FUTURE PRODUCT POSITIONING</h1>
-      <h2 class="banner-sub">We enable our streaming partners to understand and reach the growing medical cannabis market by leveraging our brand building expertise to create brands and products that resonate with patients. As Canada moves towards an adult recreational market, which will have strict marketing, advertising and labelling regulations, we can help our streaming partners prepare for and build their brands in order to grow customer loyalty.
+      <h2 class="banner-sub">We empower our streaming partners to nurture their brand equity and deliver the right message to the right audience in the medical community.<br><br>As Canada moves towards an adult recreational market, Cannabis Wheaton will facilitate a seamless protocol to build and grow their product offering, while respecting new regulations for advertising and marketing.
       </h2>
     </div>
   </div>
