--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ meta:
   </div>
 
   <div class="fullscreen-bg">
-    <video muted autoplay poster="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" class="fullscreen-bg__video">
+    <video autoplay='true' loop='true' muted='true' loop muted autoplay poster="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" class="fullscreen-bg__video">
         <source src="https://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
     </video>
   </div>
@@ -53,7 +53,7 @@ meta:
     <h2 class="para-header-alt">
       Our streaming partners have access to our deep strategic and industry relationships to help create value, drive brand awareness and build their customer base.
     </h2>
-    <div class="para-body-alt">
+    <div class="para-body">
       <p>
         Our collective insights and experiences allow Cannabis Wheaton to provide our streaming partners real-world guidance for every stage this ever-evolving landscape.
       </p>
@@ -61,11 +61,11 @@ meta:
   </div>
   <div class="text-huge-green">
     <div class="huge-text-box">
-      <h2 class="header-huge">20+</h2>
+      <h2 class="header-huge"><span class="count">20</span>+</h2>
       <h3 class="content-huge">Clinic relationships and growing</h3>
     </div>
     <div class="huge-text-box">
-      <h2 class="header-huge">25K+</h2>
+      <h2 class="header-huge"><span class="count">25</span>K+</h2>
       <h3 class="content-huge">Access to ACMPR registered patients</h3>
     </div>
   </div>
@@ -74,7 +74,7 @@ meta:
 <section class="wheaton-benefit">
   <div class="hero">
     <div class="hero-text text-center">
-      <h1 class="hero-header">Why Cannabis wheaton is better</h1>
+      <h1 class="hero-header">Benefits of the Cannabis Wheaton model</h1>
     </div>
     <div class="video-dots">
     </div>
