title case headlines

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ meta:
 <section class="text-section">
   <div class="para-box">
     <h2 class="para-header-alt">
-      A simple plan for growth.
+      A Simple Plan for Growth.
     </h2>
     <p class="para-body">
       Our model allows our streaming partners to exceed their growth potential and to achieve success. We are not interested in creating a monopoly. We are interested in creating value for companies and allowing them to exceed their growth potential and to achieve success.
@@ -51,7 +51,7 @@ meta:
 <section class="text-section about-financial">
   <div class="para-box">
     <h2 class="para-header-alt">
-      Driving brand awareness and value.
+      Driving Brand Awareness and Value.
     </h2>
     <div class="para-body">
       <p>
