SEO stuff - meta descriptions, robots, humans

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About Us
-meta:
+meta: Cannabis Wheaton is the first cannabis streaming company. We provide a platform for growth so our partners can focus on innovation.
 ---
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
