--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contact Us
-meta:
+meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soon as possible.
 ---
 <section class="bg-video clearfix contact">
   <div class="video-text-overlay text-center">
