--- a/thanks.html
+++ b/thanks.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Thank you
-meta:
+meta: Thanks for contacting Cannabis Wheaton! A member of our team will be in contact as soon as possible.
 ---
 <section class="text-section thanks-page">
   <div class="para-box">
