--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 titleAfter: A true catalyst for change
-meta:
+meta: Cannabis Wheaton is fundamentally shifting two paradigms in the Cannabis space – The traditional investment model and how the industry works together.
 ---
 
 {% include bg-video.html %}
