--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Team
-meta:
+meta: Our team is comprised of industry first-movers, visionaries and experts, dedicated to creating value for our partners and the cannabis industry.
 ---
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
