--- a/about.html
+++ b/about.html
@@ -71,20 +71,8 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
   </div>
 </section>
 
-<section class="wheaton-benefit">
-  <div class="hero">
-    <div class="hero-text text-center">
-      <h1 class="hero-header">Benefits of the Cannabis Wheaton model</h1>
-    </div>
-    <div class="video-dots">
-    </div>
-    <div class="hero-img">
-      <img src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492531279/diverse_mtk4a1.jpg" alt="">
-    </div>
-  </div>
-</section>
-
 <section class="about-grid">
+  <h1 class="about-grid-header">Benefits of the Cannabis Wheaton Model</h1>
   <div class="banner banner-one grid-one">
     <div class="banner-img-left">
       <img class="gif-one" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492722194/future-positioning_m7ghp1.gif" alt="">
