--- a/404.html
+++ b/404.html
@@ -4,3 +4,19 @@ layout: default
 title: Page not Found
 meta: Oops! We can't find the page you're looking for.
 ---
+
+<section class="text-section error-page">
+  <div class="para-box">
+    <h2 class="para-header-alt">
+      Oops! We can't find the page you're looking for.
+    </h2>
+    <div class="para-body">
+      <p class="pad-b">
+
+      </p>
+      <div class="text-center">
+        <a class="button-dark text-center" href="{{site.baseurl}}/">Return to Home</a>
+      </div>
+    </div>
+  </div>
+</section>
