--- a/thanks.html
+++ b/thanks.html
@@ -5,7 +5,7 @@ meta: Thanks for contacting Cannabis Wheaton! A member of our team will be in co
 ---
 <section class="text-section thanks-page">
   <div class="para-box">
-    <h2 class="para-header">
+    <h2 class="para-header-alt">
       Thank you for contacting Cannabis Wheaton.
     </h2>
     <div class="para-body">
