new numbers graphics

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
   </div>
 </section>
 
-<section class="graphic">
+<section class="graphic about-graphic">
   <div class="small-graphic">
     <img class="img-flex" src="{{site.baseurl}}/svgs/graphic-mobile.svg" alt="">
   </div>
@@ -59,15 +59,17 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
       </p>
     </div>
   </div>
-  <div class="text-huge-green">
-    <div class="huge-text-box">
-      <h2 class="header-huge"><span class="count">20</span>+</h2>
-      <h3 class="content-huge">Clinic relationships and growing</h3>
-    </div>
-    <div class="huge-text-box">
-      <h2 class="header-huge"><span class="count">25</span>K+</h2>
-      <h3 class="content-huge">Access to ACMPR registered patients</h3>
-    </div>
+</section>
+
+<section class="graphic numbers-graphic">
+  <div class="small-graphic">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/numbers-01.svg" alt="">
+  </div>
+  <div class="med-graphic">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/numbers-02.svg" alt="">
+  </div>
+  <div class="large-graphic">
+    <img class="img-flex" src="{{site.baseurl}}/svgs/numbers-03.svg" alt="">
   </div>
 </section>
 
