--- a/about.html
+++ b/about.html
@@ -61,15 +61,39 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
   </div>
 </section>
 
-<section class="graphic numbers-graphic">
-  <div class="small-graphic">
-    <img class="img-flex" src="{{site.baseurl}}/svgs/numbers-01.svg" alt="">
-  </div>
-  <div class="med-graphic">
-    <img class="img-flex" src="{{site.baseurl}}/svgs/numbers-02.svg" alt="">
-  </div>
-  <div class="large-graphic">
-    <img class="img-flex" src="{{site.baseurl}}/svgs/numbers-03.svg" alt="">
+<section class="number-graphics">
+  <div class="numbers clearfix">
+    <div class="count clinic-count">
+      <h1 class="number-counter">20<span class="superscript">+</span></h1>
+      <p class="number-context">Clinic relationships and growing</p>
+      <svg class="underline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.33 1">
+        <path fill="none" stroke="#a6c09a" stroke-miterlimit="10" d="M0 .5h31.33" data-name="Layer 1"/>
+      </svg>
+    </div>
+
+    <div class="count patient-count">
+      <h1 class="number-counter">25K<span class="superscript">+</span></h1>
+      <p class="number-context">Access to AMCPR registered patients</p>
+      <svg class="underline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.33 1">
+        <path fill="none" stroke="#a6c09a" stroke-miterlimit="10" d="M0 .5h31.33" data-name="Layer 1"/>
+      </svg>
+    </div>
+
+    <div class="count partner-count">
+      <h1 class="number-counter">13</h1>
+      <p class="number-context">Streaming Partners across 5 provinces</p>
+      <svg class="underline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.33 1">
+        <path fill="none" stroke="#a6c09a" stroke-miterlimit="10" d="M0 .5h31.33" data-name="Layer 1"/>
+      </svg>
+    </div>
+
+    <div class="count footage-count">
+      <h1 class="number-counter">2M<span class="superscript">+</span></h1>
+      <p class="number-context">Square feet of cultivation by 2020</p>
+      <svg class="underline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.33 1">
+        <path fill="none" stroke="#a6c09a" stroke-miterlimit="10" d="M0 .5h31.33" data-name="Layer 1"/>
+      </svg>
+    </div>
   </div>
 </section>
 
