--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
   </div>
 
   <div class="fullscreen-bg">
-    <video autoplay='true' loop='true' muted='true' loop muted autoplay poster="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1491849152/poster_olegsz.jpg" class="fullscreen-bg__video">
+    <video autoplay='true' loop='true' muted='true' loop muted autoplay poster="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1493315690/poster_xqfmj3.png" class="fullscreen-bg__video">
         <source src="https://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
     </video>
   </div>
