--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,12 @@ meta: Send a message to the Cannabis Wheaton team and we'll be in contact as soo
       <input type="text" name="fullname" placeholder="Your full name">
       <input type="email" name="email" placeholder="Your email address">
       <textarea name="message" placeholder="Your message"></textarea>
-      <button type="submit">Send</button>
+      <a href="javascript:void(0)" class="svg-wrapper-two submit-btn">
+        <svg height="40" width="130" xmlns="http://www.w3.org/2000/svg">
+          <rect class="button-shape" height="40" width="130" />
+        </svg>
+        <div class="button-text">Submit</div>
+      </a>
       <input type="hidden" name="_next" value="{{site.baseurl}}/thanks" />
     </form>
   </div>
