--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
       A Simple Plan for Growth.
     </h2>
     <p class="para-body">
-      Our model allows our streaming partners to exceed their growth potential and to achieve success. We are not interested in creating a monopoly. We are interested in creating value for companies and allowing them to exceed their growth potential and to achieve success.
+      We are not interested in creating a monopoly, We are interested in creating value for our partners and the industry.  Our model allows streaming partners to get to market quicker, exceed their growth potential and achieve greater success.
     </p>
   </div>
 </section>
