--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
   </div>
 
   <div class="fullscreen-bg">
-    <video autoplay='true' loop='true' muted='true' loop muted autoplay poster="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1493315690/poster_xqfmj3.png" class="fullscreen-bg__video">
-        <source src="https://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
+    <video autoplay='true' loop='true' muted='true' loop muted autoplay poster="http://cannabiswheaton.co/images/poster.jpg" class="fullscreen-bg__video">
+        <source src="http://cannabiswheaton.co/images/bg-vid.mp4">
     </video>
   </div>
   <a class="down-arrow" href="#smooth" id="smooth">
@@ -101,7 +101,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
   <h1 class="about-grid-header">Benefits of the Cannabis Wheaton Model</h1>
   <div class="banner banner-one grid-one">
     <div class="banner-img-left">
-      <img class="gif-one" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1492722194/future-positioning_m7ghp1.gif" alt="">
+      <img class="gif-one" src="http://cannabiswheaton.co/images/future-positioning.gif" alt="">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">Future Product Positioning</h1>
@@ -112,7 +112,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 
   <div class="banner banner-two grid-two">
     <div class="banner-img-right">
-      <img class="gif-two" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1493059181/diversification_dgeb5l.gif" alt="">
+      <img class="gif-two" src="http://cannabiswheaton.co/images/diversification.gif" alt="">
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Diversification</h1>
@@ -123,7 +123,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 
   <div class="banner banner-one grid-three">
     <div class="banner-img-left">
-      <img class="gif-three" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1493059181/upside_vs45lj.gif" alt="">
+      <img class="gif-three" src="http://cannabiswheaton.co/images/upside.gif" alt="">
     </div>
     <div class="banner-text-right">
       <h1 class="banner-header">Upside</h1>
@@ -134,7 +134,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 
   <div class="banner banner-two grid-four">
     <div class="banner-img-right">
-      <img class="gif-four" src="https://res.cloudinary.com/dtbrkt2ur/image/upload/v1493059181/brands_gk0jpv.gif" alt="">
+      <img class="gif-four" src="http://cannabiswheaton.co/images/brands.gif" alt="">
     </div>
     <div class="banner-text-left">
       <h1 class="banner-header">Best Brands</h1>
