--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ meta: Cannabis Wheaton is the first cannabis streaming company. We provide a pla
 ---
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
-    <h1 class="hero-header way">WE ARE THE FIRST CANNABIS STREAMING COMPANY</h1>
+    <h1 class="hero-header way">A catalyst for change</h1>
     <h2 class="hero-sub">The model is simple: We provide funding for facility expansions, operations and initial construction in exchange for minority equity interests and a portion of the cultivation production. We provide the platform for growth so our partners can focus on innovation.
     </h2>
   </div>
