--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@ meta: Cannabis Wheaton is fundamentally shifting two paradigms in the Cannabis s
 {% include home-connect.html %}
 
 {% include home-team.html %}
+
+<div id="container" style="height: 500px; min-width: 310px"></div>
