new advisor team members

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@ meta: Cannabis Wheaton is fundamentally shifting two paradigms in the Cannabis s
 
 {% include home-team.html %}
 
-<div id="container" style="height: 500px; min-width: 310px"></div>
+
+<!--<div id="container" style="height: 500px; min-width: 310px"></div>-->
