titles added to advisors

--- a/team.html
+++ b/team.html
@@ -44,6 +44,7 @@ meta: Our team is comprised of industry first-movers, visionaries and experts, d
       <!--  <img class="img-flex" src="" alt="">-->
       </div>
       <h3 class="team-name">{{member.name}}</h3>
+      <p class="team-title">{{member.title}}</p>
       <p class="team-bio">{{member.bio}}</p>
     </div>
   {% endfor %}
