mini content edits

--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@ meta: Our team is comprised of industry first-movers, visionaries and experts, d
     </div>
   {% endfor %}
   <div class="board-members">
-    <h1 class="team-header">Members of the Board</h1>
+    <h1 class="team-header">Board of Directors</h1>
     {% for member in site.data.board %}
       <div class="team-member">
         <div class="team-photo">
